--- a/GOVT496_paper.Rmd
+++ b/GOVT496_paper.Rmd
@@ -19,13 +19,20 @@ _This paper presents analysis between the relationship citizens in Washington D.
 
 ## Previous Research
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;There's an ongoing discussion between academics about the indications of civic duty within smaller communities. Researchers have been studying this topic by analysis of 311 systems--- the amount of requests, the response times, and the type of requests are all important aspects that show the relationship citizens have with their local government.     
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The theories that motivate the analysis in this paper stem from a combination of scholars who have written journal articles on political participation in local communities. Aars and Stomsnes (2007) believe that when citizens contact their local government it demonstrates that they have a certain degree of trust in their public administrators to meet their requests. Although their studies were focused on political participation in European cities, their analysis reveals that direct contacting is correlated with strong sentiments of a representative democracy. Other scholars such as Thomas (1982) and Levine and Gershenson (2014) believe that the citizens requesting service feel entitled to government services. Thomas's theory of "clientele participation" demonstrates this ideal perfectly-- citizens who feel entitled to service will request the most service of their local government in comparison to citizens who do not feel as entitled to service. Certain wards in the D.C. request services at a higher rate than others due to their expectations of the government. This is also an example of the "social contract" at work. The local government is expected to meet the claims of its citizens in a timely and fair manner, while citizens are expected to continuously file claims on the community in an effort to make the community a better place.      
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The theories that motivate the analysis in this paper stem from a combination of scholars who have written journal articles on political participation in local communities. Aars and Stomsnes (2007) believe that when citizens contact their local government it demonstrates that they have a certain degree of trust in their public administrators to meet their requests. Although their studies were focused on political participation in European cities, their analysis reveals that direct contacting is correlated with strong sentiments of a representative democracy. Other scholars such as Thomas (1982) and Levine and Gershenson (2014) believe that the citizens requesting service feel entitled to government services. Thomas's theory of "clientele participation" demonstrates this ideal perfectly-- citizens who feel entitled to service will request the most service of their local government in comparison to citizens who do not feel as entitled to service. Certain wards in the D.C. request services at a higher rate than others due to their expectations of the government. This is also an example of the "social contract" at work. The local government is expected to meet the claims of its citizens in a timely and fair manner, while citizens are expected to continuously file claims on the community in an effort to make the community a better place.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In support of the social contract, O'Brien's (2016) research suggests that 311 requests are associated with territorial incentives that benefit the individual and the community as a whole. For example, an individual notices cars driving through a four way stop because the stop sign is either missing or unreadable. The territorial individual files a claim through the 311 system. When the sign is replaced, drivers in this area are more cautious at the four way stop. The individual who filed the claim is now safer in his community as well as the other people who live and drive in this area. This example demonstrates the social contract's fulfillment as well. 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Some interesting research has been done in regards to 311 request systems. A study a
 ## Methods
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As discussed previously, contacting local government indicates levels of trust in government and levels of entitlement. I have taken the data collected from D.C. 311 phone calls in 2017 sourced from opendata.dc.gov, and have found a number of facts that show which of the 8 wards trust their government the most and have the highest levels of entitlement. The analysis of how quickly claims are resolved by administrations in D.C. also shows how well the social contract in D.C. is held between each ward and the government. 
 ## Analysis
 ## Conclusions and Questions
+## Works Cited
 
+Jacob Aars & Kristin Strømsnes 2007. "Contacting as a channel of Political Involvement: Collectively
+&nbsp;&nbsp;&nbsp;Motivated, Individually Enacted, West European Politics" 30:1, 93-120.      
+Levine, Jeremy R., and Carl Gershenson 2014. "From Political to Material Inequality: Race, Immigration, &nbsp;&nbsp;&nbsp;and Requests for Public Goods." Sociological Forum  29:3 607-27.     
+Thomas, John. 1982. "Citizen-Initiated Contacts With Government Agencies: A Test of Three Theories." &nbsp;&nbsp;&nbsp;American Journal of Political Science 26:3.            
+O'Brien, Daniel Tumminelli 2016. "Using Small Data to Interpret Big Data: 311 Reports as Individual &nbsp;&nbsp;&nbsp;Contributions to Informal Social Control in Urban Neighborhoods" Social Science Research. 8 83-96.
 ```{r cars}
 summary(cars)
 ```
