--- a/GOVT496_paper.Rmd
+++ b/GOVT496_paper.Rmd
@@ -23,8 +23,15 @@ _This paper presents analysis between the relationship citizens in Washington D.
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In support of the social contract, O'Brien's (2016) research suggests that 311 requests are associated with territorial incentives that benefit the individual and the community as a whole. For example, an individual notices cars driving through a four way stop because the stop sign is either missing or unreadable. The territorial individual files a claim through the 311 system. When the sign is replaced, drivers in this area are more cautious at the four way stop. The individual who filed the claim is now safer in his community as well as the other people who live and drive in this area. This example demonstrates the social contract's fulfillment as well.            
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Some interesting research has been done in regards to 311 request systems. A study done by Finley (2017) using New York City's over 20 million service requests in 2017 shows attitudes residents have towards the homeless. In NYC, unlike D.C. 311 services include reporting people who are homeless. Finely found two traits to reports of homelessness. The first was an act of humanity; people would report an individual as homeless to help them find the resources they need to survive. The second was less humane in that people would report the homeless to escort them out of their neighbor and into an asylum. Two opposing views of homeless are demonstrated but both support a theory explained earlier- individuals who request service of their local government trust the government to take care of the issue and feel entitled to the government's service. In this case the constituents were request the government to take care of the homeless.
 ## Methods       
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As discussed previously, contacting local government indicates levels of trust in government and levels of entitlement. I have taken the data collected from D.C. 311 phone calls in 2017 sourced from opendata.dc.gov, and have found a number of facts that show which of the 8 wards trust their government the most and have the highest levels of entitlement. The analysis of how quickly claims are resolved by administrations in D.C. also shows how well the social contract in D.C. is held between each ward and the government. 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As discussed previously, contacting local government indicates levels of trust in government and levels of entitlement. I have taken the data collected from D.C. 311 phone calls in 2017 sourced from opendata.dc.gov, and have found a number of facts that show which of the 8 wards trust their government the most and have the highest levels of entitlement.The analysis of how quickly claims are resolved by administrations in D.C. also shows how well the social contract in D.C. is held between each ward and the government. Targeting which services in each ward take the longest to complete will indicate which areas D.C.'s local government must work on to quicken response time. This will inherently build more trust D.C. communities and D.C. government.
 ## Analysis
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In order to find out which wards of D.C. trust the government the most and feel most entitled to services, I've found which wards request the most services. In order from most requested to least requested 2, 6, 5, 4, 1, 7, 3, 8.
+crosstab(test, row.vars = "SERVICECODE", col.vars = "WARD", type = "f")
+```{r}
+crosstab(test, row.vars = "SERVICECODE", col.vars = "WARD", type = "f")
+```
+
+
 ## Conclusions and Questions
 ## Works Cited
 Finley, Grace 2017. "When the Rich Meet the Poor: Interactions with the Homeless in NYC" Policy File.
