--- a/GOVT496_paper.Rmd
+++ b/GOVT496_paper.Rmd
@@ -21,9 +21,12 @@ _This paper presents analysis between the relationship citizens in Washington D.
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;There's an ongoing discussion between academics about the indications of civic duty within smaller communities. Researchers have been studying this topic by analysis of 311 systems--- the amount of requests, the response times, and the type of requests are all important aspects that show the relationship citizens have with their local government.     
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The theories that motivate the analysis in this paper stem from a combination of scholars who have written journal articles on political participation in local communities. Aars and Stomsnes (2007) believe that when citizens contact their local government it demonstrates that they have a certain degree of trust in their public administrators to meet their requests. Although their studies were focused on political participation in European cities, their analysis reveals that direct contacting is correlated with strong sentiments of a representative democracy. Other scholars such as Thomas (1982) and Levine and Gershenson (2014) believe that the citizens requesting service feel entitled to government services. Thomas's theory of "clientele participation" demonstrates this ideal perfectly-- citizens who feel entitled to service will request the most service of their local government in comparison to citizens who do not feel as entitled to service. Certain wards in the D.C. request services at a higher rate than others due to their expectations of the government. This is also an example of the "social contract" at work. The local government is expected to meet the claims of its citizens in a timely and fair manner, while citizens are expected to continuously file claims on the community in an effort to make the community a better place.       
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In support of the social contract, O'Brien's (2016) research suggests that 311 requests are associated with territorial incentives that benefit the individual and the community as a whole. For example, an individual notices cars driving through a four way stop because the stop sign is either missing or unreadable. The territorial individual files a claim through the 311 system. When the sign is replaced, drivers in this area are more cautious at the four way stop. The individual who filed the claim is now safer in his community as well as the other people who live and drive in this area. This example demonstrates the social contract's fulfillment as well.            
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Some interesting research has been done in regards to 311 request systems. A study done by Finley (2017) using New York City's over 20 million service requests in 2017 shows attitudes residents have towards the homeless. In NYC, unlike D.C. 311 services include reporting people who are homeless. Finely found two traits to reports of homelessness. The first was an act of humanity; people would report an individual as homeless to help them find the resources they need to survive. The second was less humane in that people would report the homeless to escort them out of their neighbor and into an asylum. Two opposing views of homeless are demonstrated but both support a theory explained earlier- individuals who request service of their local government trust the government to take care of the issue and feel entitled to the government's service. In this case the constituents were request the government to take care of the homeless.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Some interesting research has been done in regards to 311 request systems. A study done by Finley (2017) using New York City's over 20 million service requests in 2017 shows attitudes residents have towards the homeless. In NYC, unlike D.C. 311 services include reporting people who are homeless. Finely found two traits to reports of homelessness. The first was an act of humanity; people would report an individual as homeless to help them find the resources they need to survive. The second was less humane in that people would report the homeless to escort them out of their neighbor and into an asylum. Two opposing views of homeless are demonstrated but both support a theory explained earlier- individuals who request service of their local government trust the government to take care of the issue and feel entitled to the government's service. In this case the constituents were request the government to take care of the homeless.     
+
 ## Methods       
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As discussed previously, contacting local government indicates levels of trust in government and levels of entitlement. I have taken the data collected from D.C. 311 phone calls in 2017 sourced from opendata.dc.gov, and have found a number of facts that show which of the 8 wards trust their government the most and have the highest levels of entitlement.The analysis of how quickly claims are resolved by administrations in D.C. also shows how well the social contract in D.C. is held between each ward and the government. Targeting which services in each ward take the longest to complete will indicate which areas D.C.'s local government must work on to quicken response time. This will inherently build more trust D.C. communities and D.C. government.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As discussed previously, contacting local government indicates levels of trust in government and levels of entitlement. I have taken the data collected from D.C. 311 phone calls in 2017 sourced from opendata.dc.gov, and have found a number of facts that show which of the 8 wards trust their government the most and have the highest levels of entitlement.The analysis of how quickly claims are resolved by administrations in D.C. also shows how well the social contract in D.C. is held between each ward and the government. Targeting which services in each ward take the longest to complete will indicate which areas D.C.'s local government must work on to quicken response time. This will inherently build more trust D.C. communities and D.C. government.     
+
 ## Analysis
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In order to find out which wards of D.C. trust the government the most and feel most entitled to services, I've found which wards request the most services. In order from most requested to least requested 2, 6, 5, 4, 1, 7, 3, 8.
 ```{r}
