--- a/GOVT496_paper.Rmd
+++ b/GOVT496_paper.Rmd
@@ -43,9 +43,9 @@ avgdays <- as.table(avgdays)
 avgdays
 ```
 
-The final part of this analysis displays the differences in wards needs and where the local government can improve in meeting these needs. These next nine graphs show which request types took longest to complete in all of D.C. and by ward.     
-Overdue Services in D.C.: http://rpubs.com/jamiealexx/385652     
-As displayed in this graph D.C. takes the longest to respond to request's regarding bulk collection, parking meter repair, and parking enforcement. These requests are handled by three different administrations: the Solid Waste Management Administration, the Transportation Operations Administration, and the Parking Enforcement Management Administration. When looking at wards more specifically their is a general trend amongst wards: within their top overdue requests we see bulk collection listed.        
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The final part of this analysis displays the differences in wards needs and where the local government can improve in meeting these needs. These next nine graphs show which request types took longest to complete in all of D.C. and by ward.     
+Overdue Services in D.C.: http://rpubs.com/jamiealexx/385652       
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As displayed in this graph D.C. takes the longest to respond to request's regarding bulk collection, parking meter repair, and parking enforcement. These requests are handled by three different administrations: the Solid Waste Management Administration, the Transportation Operations Administration, and the Parking Enforcement Management Administration. When looking at wards more specifically their is a general trend amongst wards: within their top overdue requests we see bulk collection listed.             
 Ward 1: http://rpubs.com/jamiealexx/385650     
 Ward 2: http://rpubs.com/jamiealexx/385648     
 Ward 3: http://rpubs.com/jamiealexx/385646     
@@ -53,15 +53,21 @@ Ward 4: http://rpubs.com/jamiealexx/385645
 Ward 5: http://rpubs.com/jamiealexx/385644      
 Ward 6: http://rpubs.com/jamiealexx/385641      
 Ward 7: http://rpubs.com/jamiealexx/385640      
-Ward 8: http://rpubs.com/jamiealexx/385639
+Ward 8: http://rpubs.com/jamiealexx/385639     
+
 ## Conclusions and Questions
+
 ## Works Cited
 City Service Requests 2017. opendata.dc.gov
+     
 Finley, Grace 2017. "When the Rich Meet the Poor: Interactions with the Homeless in NYC" Policy File.
+     
 Jacob Aars & Kristin Strømsnes 2007. "Contacting as a channel of Political Involvement: Collectively
-&nbsp;&nbsp;&nbsp;Motivated, Individually Enacted, West European Politics" 30:1, 93-120.      
-Levine, Jeremy R., and Carl Gershenson 2014. "From Political to Material Inequality: Race, Immigration, &nbsp;&nbsp;&nbsp;and Requests for Public Goods." Sociological Forum  29:3 607-27.      
-O'Brien, Daniel Tumminelli 2016. "Using Small Data to Interpret Big Data: 311 Reports as Individual &nbsp;&nbsp;&nbsp;Contributions to Informal Social Control in Urban Neighborhoods" Social Science Research. 8 83-96.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Motivated, Individually Enacted, West European Politics" 30:1, 93-120.      
+Levine, Jeremy R., and Carl Gershenson 2014. "From Political to Material Inequality: Race, &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Immigration, and Requests for Public Goods." Sociological Forum  29:3 607-27. 
+      
+O'Brien, Daniel Tumminelli 2016. "Using Small Data to Interpret Big Data: 311 Reports as Individual &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Contributions to Informal Social Control in Urban Neighborhoods" Social &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Science Research. 8 83-96.      
+      
 Thomas, John. 1982. "Citizen-Initiated Contacts With Government Agencies: A Test of Three Theories." &nbsp;&nbsp;&nbsp;American Journal of Political Science 26:3.            
 
 ```{r cars}
