--- a/GOVT496_paper.Rmd
+++ b/GOVT496_paper.Rmd
@@ -56,10 +56,13 @@ Ward 7: http://rpubs.com/jamiealexx/385640
 Ward 8: http://rpubs.com/jamiealexx/385639     
 
 ## Conclusions and Questions
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As shown in my analysis, D.C. responds to each ward, disregarding overdue service analysis, promptly and fairly. However, it shows that Wards 7 and 8 have a different relationship with D.C.'s government than do the other wards. There are multiple theories at work here.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As shown in my analysis, D.C. responds to each ward, disregarding overdue service analysis, promptly and fairly. However, it shows that Wards 7 and 8 have a different relationship with D.C.'s government than do the other wards. There are multiple theories at work here.          
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;According to O'Brien individuals who request less work on their community to be done by the government feel less tied to their community. This theory aligns with the amount of people in these wards who own versus rent their home. According to the U.S. Census Bureu, in 2017 in Ward 8, 6,358 people lived in a house they owned. Whereas as 20,384 people lived in a house they rented. In Ward 7, 11,916 people lived in a house they owned. Whereas 18,013 people lived in a house they rented. Ward 7 and 8 contrast starkly with the demographics of Ward 2, who actually requested the most service of the 8 wards. In Ward 2, in comparison to Ward 8, more than double the amount of people live in a home they own, at 14,061 people. In Ward 2 26,301 rent the house they live in. Because their are more people in Ward 2 than in Wards 7 and 8 who own property, the citizens in Ward 2 are more territorial of their community and will then request more service of their local government.        
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Feeling entitled to service, according to levine and Gershenson also has to property rights. Wards  7 and 8 are in a lower income bracket in comparison to the other 6 wards and thus pay less income tax to the government. They also pay less in property taxes because they own less land in their respected wards. Due to these two factors, Wards 7 and 8 feel less engaged with the government because they are giving the government less money. Giving the government less money makes them feel less entitled to services. This may be a factor in why these two wards request less service.        
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The last determinant of requesting service is trust in government. 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Feeling entitled to service, according to levine and Gershenson also has to property rights. Wards  7 and 8 are in a lower income bracket in comparison to the other 6 wards and thus pay less income tax to the government. They also pay less in property taxes because they own less land in their respected wards. Due to these two factors, Wards 7 and 8 feel less engaged with the government because they are giving the government less money. Giving the government less money makes them feel less entitled to services. This may be a factor in why these two wards request less service.                  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The last determinant of requesting service is trust in government. According to Aars and Stomsnes, individuals who request service of the government, have a certain level of trust that the government will fulfill their request. When looking at Wards 7 and 8, the conclusion that these wards trust the government less than the other wards is open for more discussion and further research. These wards have undergone urban revitalization over the past decade. Much dispute has arisen because urban developers are "gentrifying" these areas and taking away the public housing of some of D.C.'s lowest income residents. Urban development plans may have caused citizens in Wards 7 and 8 to lose trust with D.C.'s local government. This in not a conclusive response to the citizen's mistrust of government in Wards 7 and 8 but provides some answer.This topic does require further research and can become its own research paper.     
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lastly, the analysis shows that D.C. can improve it's response time to service requests across wards. In particular the SWMA, PEMA, and TOA can improve their response time to each wards requests. Each ward has particular services that are most overdue but within each ward's top 3 overdue requests, bulk collection appears in each graph. Bulk collection can be a target for D.C.'s SWMA to improve upon.         
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Building trust between government and citizens starts at the local level. 311 service requests are a great for citizens to perform their civic duty and request their government to act to make the community a better place to live. Washington D.C.'s 311 system has shown to treat all wards equally in regards to average response times to requests but there is room for improvement. Responding to the overdue requests in a more timely manner can rebuild trust between citizens and government, and can improve the standards of living in D.C. The topic left to be further researched and worked on is how to get Ward's 7 and 8 to request more service of D.C.'s government. D.C. has some work to due in ensuring that all individuals living in the community know that the local government is there to support and fulfill the needs of its community members. 
+***********
 ## Works Cited
 City Service Requests 2017. opendata.dc.gov
      
